--- a/src/app/rating/rating.component.html
+++ b/src/app/rating/rating.component.html
@@ -1,10 +1,10 @@
-@for (star of stars; track $index) {
+@for (star of stars(); track $index) {
   @if (star) {
     <img
       src="/assets/star.svg"
       class="star"
       (mousedown)="rate($index + 1)"
-      (dblclick)="enterCheatMode()"
+      (dblclick)="toggleCheatMode()"
       [alt]="$index"
     />
   } @else {
@@ -12,7 +12,7 @@
       src="/assets/star-shadow.svg"
       class="star"
       (mousedown)="rate($index + 1)"
-      (dblclick)="enterCheatMode()"
+      (dblclick)="toggleCheatMode()"
       [alt]="$index"
     />
   }
