--- a/src/app/dessert-card/dessert-card.component.html
+++ b/src/app/dessert-card/dessert-card.component.html
@@ -1,20 +1,20 @@
 <div class="card">
-  <h2 class="card-title">{{ dessert.originalName }}</h2>
-  <i class="card-subtitle">{{ dessert.englishName }}</i>
+  <h2 class="card-title">{{ dessert().originalName }}</h2>
+  <i class="card-subtitle">{{ dessert().englishName }}</i>
 
   <img
     class="w-full mt-5"
-    src="/assets/{{ dessert.image }}"
+    src="/assets/{{ dessert().image }}"
     alt="Bildbeschreibung"
   />
 
   <div class="card-body mb-0">
-    <span class="card-text">{{ dessert.description }}</span>
+    <span class="card-text">{{ dessert().description }}</span>
   </div>
   <div class="card-footer">
-    <div class="card-text mt-0 mb-5">{{ dessert.kcal }} kcal</div>
+    <div class="card-text mt-0 mb-5">{{ dessert().kcal }} kcal</div>
     <app-rating
-      [rating]="dessert.rating"
+      [rating]="dessert().rating"
       (ratingChange)="updateRating($event)"
     ></app-rating>
   </div>
