--- a/src/app/desserts/desserts.component.html
+++ b/src/app/desserts/desserts.component.html
@@ -10,20 +10,7 @@
     </div>
   </div>
   <div class="mt-10 mb-10">
-    <button
-      type="submit"
-      (click)="search()"
-      class="btn btn-primary"
-      [disabled]="loading()"
-    >
-      Search
-    </button>
-    <button
-      type="button"
-      (click)="loadRatings()"
-      class="btn ml-2"
-      [disabled]="loading()"
-    >
+    <button type="button" (click)="loadRatings()" class="btn">
       Expert Ratings
     </button>
 
